# TEF6686_autodx

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/TEF6686/: CMakeLists.txt  TEF6686_driver.c
components/TEF6686/include/: TEF6686_driver.h  Tuner_Patch_Lithio_V102_p224.h
components/lcd1602/: CMakeLists.txt
components/lcd1602/lib/: lcd1602_protocol.h
main/: CMakeLists.txt  buttons_helper.c  buttons_helper.h  common_types.h  display_helper.c  display_helper.h  i2c_helpers.c  i2c_helpers.h  main.c  mode_helper.c  mode_helper.h  monitoring_mode.c  monitoring_mode.h  radio_mode.c  radio_mode.h  service_mode.c  service_mode.h  wifi_config.h.example  wifi_helper.c  wifi_helper.h
web_files/: autodx.php  config.php  import_json.php  monitoring_stations_handler.php  save_freq_history.php  save_freq_history_recent.php  tg_send.php
web_files/api/: get_monitoring_json.php
